--- a/src/register.html
+++ b/src/register.html
@@ -131,7 +131,7 @@
         </div>
       </form>
       <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
-        <button class="text-white bg-dBlue w-[192px] pt-[13px] pb-3 rounded-md">
+        <button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
           Next
         </button>
       </div>
