--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
             <a href="#" class="ml-[473px] font-light underline">Lupa password?</a>
           </div>
           <div class="text-lg ml-[473px] font-nunito font-extrabold h-[50px] mt-[11px]">
-              <button class="text-aBlue border-2 border-aBlue w-[192px] py-3 rounded-md">Daftar</button>
-              <button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-3 ml-9 rounded-md">Masuk</button>
+              <button class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md">Daftar</button>
+              <button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] ml-9 rounded-md">Masuk</button>
           </div>
             <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
               Copyright © 2023 Kemenag RI. All Right Reserved
