--- a/src/register-username.html
+++ b/src/register-username.html
@@ -55,7 +55,7 @@
           />
         </div>
       <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
-        <button class="text-white bg-dBlue w-[192px] pt-[13px] pb-3 rounded-md">
+        <button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
           Next
         </button>
       </div>
