revision page register 1&2 title

--- a/src/register.html
+++ b/src/register.html
@@ -19,7 +19,7 @@
   </head>
   <body class="flex flex-col min-h-screen">
     <div class="form-register font-nunito ml-[473px]">
-      <div class="mt-[72px] font-extrabold text-bBlue text-2xl">Masuk</div>
+      <div class="mt-[72px] font-extrabold text-bBlue text-2xl">Daftar</div>
       <div class="mt-[3px] font-normal text-bBlue text-xl">
         Silahkan Masukan Data Diri
       </div>
