add slicing Home page and upload photo page revision

--- a/src/register-upload-photo.html
+++ b/src/register-upload-photo.html
@@ -25,25 +25,56 @@
       </div>
       <div class="mt-[27px]">
         <table>
-            <tr>
-                <th class="align-text-top">
-                    <div class="mt-[10px] font-semibold text-base text-bBlue text-left">Foto Tampak Depan <br> (1/10)</div>
-                </th>
-                <th>
-                    <div class="contoh-photo w-[86px] ml-[186px] text-right"><img src="/src/assets/Images/stock-photo.png" alt="contoh photo diri"></div>
-                </th>
-            </tr>
+          <tr>
+            <th class="align-text-top">
+              <div
+                class="mt-[10px] font-semibold text-base text-bBlue text-left"
+              >
+                Foto Tampak Depan <br />
+                (1/10)
+              </div>
+            </th>
+            <th>
+              <div class="contoh-photo w-[86px] ml-[186px] text-right">
+                <img
+                  src="/src/assets/Images/stock-photo.png"
+                  alt="contoh photo diri"
+                />
+              </div>
+            </th>
+          </tr>
         </table>
-        <div class="upload-box w-[418px] h-[253px] mt-[18px] border-2 border-bBlue rounded-md text-center">
-            <img src="/src/assets/Images/picture-logo.png" alt="logo-picture" class="w-[163px] mt-2 m-auto">
-            <div> <button class="text-sm font-semibold text-white bg-bBlue rounded-md w-[85px] h-29[px] py-[10px]">Upload</button></div>
+        <div
+          class="upload-box w-[418px] h-[253px] mt-[18px] border-2 border-bBlue rounded-md text-center"
+        >
+          <img
+            src="/src/assets/Images/picture-logo.png"
+            alt="logo-picture"
+            class="w-[163px] mt-2 m-auto"
+          />
+          <div>
+            <button
+              class="text-sm font-semibold text-white bg-bBlue rounded-md w-[85px] h-29[px] py-[10px]"
+            >
+              Upload
+            </button>
+          </div>
         </div>
+      </div>
+      <div class="mt-4">
+        <button
+          class="border-2 border-bBlue w-[162px] py-3 text-bBlue text-lg font-extrabold rounded-md"
+        >
+          Cancel
+        </button>
+        <button
+          class="border-2 border-dBlue bg-dBlue text-white py-3 w-[162px] text-lg font-extrabold rounded-md ml-[90px] mb-16"
+        >
+          Next
+        </button>
+      </div>
     </div>
-    <div class="mt-4">
-        <button class="border-2 border-bBlue w-[162px] py-3 text-bBlue text-lg font-extrabold rounded-md">Cancel</button>
-        <button class="border-2 border-dBlue bg-dBlue text-white py-3 w-[162px] text-lg font-extrabold rounded-md ml-[90px] mb-16">Next</button>
-    </div>
-    <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0 -ml-[473px]">
+    <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
