add link function

--- a/src/register-upload-photo.html
+++ b/src/register-upload-photo.html
@@ -62,16 +62,20 @@
         </div>
       </div>
       <div class="mt-4">
-        <button
-          class="border-2 border-bBlue w-[162px] py-3 text-bBlue text-lg font-extrabold rounded-md"
+        <a href="/src/register-username.html"
+          ><button
+            class="border-2 border-bBlue w-[162px] py-3 text-bBlue text-lg font-extrabold rounded-md"
+          >
+            Cancel
+          </button></a
         >
-          Cancel
-        </button>
-        <button
-          class="border-2 border-dBlue bg-dBlue text-white py-3 w-[162px] text-lg font-extrabold rounded-md ml-[90px] mb-16"
+        <a href="/src/success.html"
+          ><button
+            class="border-2 border-dBlue bg-dBlue text-white py-3 w-[162px] text-lg font-extrabold rounded-md ml-[90px] mb-16"
+          >
+            Next
+          </button></a
         >
-          Next
-        </button>
       </div>
     </div>
     <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
