--- a/src/register.html
+++ b/src/register.html
@@ -131,9 +131,11 @@
         </div>
       </form>
       <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
-        <button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
-          Next
-        </button>
+        <a href="/src/register-username.html"
+          ><button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
+            Next
+          </button></a
+        >
       </div>
     </div>
     <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
