--- a/src/success.html
+++ b/src/success.html
@@ -27,11 +27,13 @@
         Akun Telah Berhasil Didaftarkan!
       </div>
       <div class="mt-[27px] py-3 ml-[560px]">
-        <button
-          class="bg-dBlue text-white text-lg font-extrabold rounded-md w-[246px] px-[10px] py-3"
+        <a href="/src/login.html"
+          ><button
+            class="bg-dBlue text-white text-lg font-extrabold rounded-md w-[246px] px-[10px] py-3"
+          >
+            Kembali ke Halaman Awal
+          </button></a
         >
-          Kembali ke Halaman Awal
-        </button>
       </div>
     </div>
     <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
