--- a/src/register-username.html
+++ b/src/register-username.html
@@ -55,9 +55,7 @@
           />
         </div>
       <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
-        <button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
-          Next
-        </button>
+        <a href="/src/upload-photo.html"><button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">Next</button></a>
       </div>
     </div>
     <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
