add cancel button on register page

--- a/src/register-username.html
+++ b/src/register-username.html
@@ -54,8 +54,15 @@
             class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
-      <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
-        <a href="/src/upload-photo.html"><button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">Next</button></a>
+      <div class="mt-[14px] mb-10 text-lg font-extrabold">
+        <a href="/src/register.html"
+          ><button
+            class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md"
+          >
+            Cancel
+          </button></a
+        >
+        <a href="/src/upload-photo.html"><button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]">Next</button></a>
       </div>
     </div>
     <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
