--- a/src/register.html
+++ b/src/register.html
@@ -130,9 +130,18 @@
           />
         </div>
       </form>
-      <div class="mt-[14px] ml-[229px] mb-10 text-lg font-extrabold">
+      <div class="mt-[14px] mb-10 text-lg font-extrabold">
+        <a href="/src/login.html"
+          ><button
+            class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md"
+          >
+            Cancel
+          </button></a
+        >
         <a href="/src/register-username.html"
-          ><button class="text-white bg-dBlue w-[192px] py-[10px] rounded-md">
+          ><button
+            class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]"
+          >
             Next
           </button></a
         >
