change sort into button

--- a/src/laporan.html
+++ b/src/laporan.html
@@ -71,11 +71,13 @@
                   <tr>
                     <th class="w-[229px]">Absen Masuk</th>
                     <th>
-                      <img
-                        src="/src/assets/Images/sort-logo.png"
-                        alt="sort"
-                        class="w-[21px]"
-                      />
+                        <button class="pt-1.5">
+                            <img
+                              src="/src/assets/Images/sort-logo.png"
+                              alt="sort"
+                              class="w-[21px]"
+                            />
+                        </button>
                     </th>
                   </tr>
                 </table>
@@ -85,11 +87,13 @@
                   <tr>
                     <th class="w-[229px]">Absen Keluar</th>
                     <th>
-                      <img
-                        src="/src/assets/Images/sort-logo.png"
-                        alt="sort"
-                        class="w-[21px]"
-                      />
+                        <button class="pt-1.5">
+                            <img
+                              src="/src/assets/Images/sort-logo.png"
+                              alt="sort"
+                              class="w-[21px]"
+                            />
+                        </button>
                     </th>
                   </tr>
                 </table>
@@ -99,11 +103,13 @@
                   <tr>
                     <th class="w-[339px]">Laporan</th>
                     <th>
-                      <img
-                        src="/src/assets/Images/sort-logo.png"
-                        alt="sort"
-                        class="w-[21px]"
-                      />
+                        <button class="pt-1.5">
+                            <img
+                              src="/src/assets/Images/sort-logo.png"
+                              alt="sort"
+                              class="w-[21px]"
+                            />
+                        </button>
                     </th>
                   </tr>
                 </table>
