add link to the menu

--- a/src/laporan.html
+++ b/src/laporan.html
@@ -23,19 +23,19 @@
         <table>
           <tr>
             <th class="text-center font-bold py-[17px] pl-14">
-              <a href="#">Beranda</a>
+              <a href="/src/home.html">Beranda</a>
             </th>
             <th class="text-center px-10 font-black underline">
-              <a href="#">Laporan Harian</a>
+              <a href="/src/laporan.html">Laporan Harian</a>
             </th>
             <th class="text-center font-bold">
-              <a href="#">Profil</a>
+              <a href="/src/profil.html">Profil</a>
             </th>
             <th class="text-right font-bold pl-[779px]">
-              <a href="#">Keluar</a>
+              <a href="/src/login.html">Keluar</a>
             </th>
             <th>
-              <a href="#"
+              <a href="/src/login.html"
                 ><img
                   src="/src/assets/Images/logout-logo.png"
                   alt="logo-logout"
