restructure Home and Profile Page

--- a/src/home.html
+++ b/src/home.html
@@ -46,31 +46,43 @@
         </table>
         <div class="content mt-10 ml-[250px] text-bBlue">
           <div class="font-extrabold text-4xl">Selamat Datang!</div>
-          <table class="mt-[15px] text-base font-semibold">
-            <tr>
-              <th class="text-left leading-8">
-                Nama <br />
-                NIP <br />
-                Unit Kerja <br />
-                Jenis Kelamin <br />
-                Email
-              </th>
-              <th class="text-left pl-[14px] leading-8">
-                : Pieter Schrodinger <br />
-                : nonpns19973423449234 <br />
-                : Direktorat Pendidikan Tinggi <br />
-                : Laki-laki <br />
-                : pieter@gmail.com
-              </th>
-              <th class="pl-[440px]">
-                <img
-                  src="/src/assets/Images/stock-photo.png"
-                  alt="foto-diri"
-                  class="w-[155px]"
-                />
-              </th>
-            </tr>
-          </table>
+          <div class="mt-[15px]">
+            <table class="text-base font-semibold">
+              <tr>
+                <th>
+                  <table class="text-left">
+                    <tr>
+                      <td class="pt-[25px]">Nama</td>
+                      <td class="pt-[25px]">: Pieter Schrodinger</td>
+                    </tr>
+                    <tr>
+                      <td class="pt-4">NIP</td>
+                      <td class="pt-4">: nonpns19973423449234</td>
+                    </tr>
+                    <tr>
+                      <td class="pt-4">Unit Kerja</td>
+                      <td class="pt-4">: Direktorat Pendidikan Tinggi Islam</td>
+                    </tr>
+                    <tr>
+                      <td class="pt-4">Jenis Kelamin</td>
+                      <td class="pt-4">: Laki-Laki</td>
+                    </tr>
+                    <tr>
+                      <td class="pt-4">Email</td>
+                      <td class="pt-4">: pieter@gmail.com</td>
+                    </tr>
+                  </table>
+                </th>
+                <th class="pl-[440px]">
+                  <img
+                    src="/src/assets/Images/stock-photo.png"
+                    alt="foto-diri"
+                    class="w-[155px]"
+                  />
+                </th>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
