--- a/src/profil.html
+++ b/src/profil.html
@@ -48,31 +48,51 @@
           <div class="font-extrabold text-4xl">Profil</div>
           <table class="mt-[15px] text-base font-semibold">
             <tr>
-              <th class="text-left leading-8">
-                Nama <br />
-                NIP <br />
-                Unit Kerja <br />
-                TTL <br />
-                Jenis Kelamin <br />
-                Agama <br />
-                Alamat <br />
-                No.Telp <br />
-                Email <br />
-                Pendidikan
+              <th>
+                <table class="text-left">
+                  <tr>
+                    <td class="pt-[25px]">Nama</td>
+                    <td class="pt-[25px]">: Pieter Schrodinger</td>
+                  </tr>
+                  <tr>
+                    <td class="pt-1">NIP</td>
+                    <td class="pt-1">: nonpns19973423449234</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Unit Kerja</td>
+                    <td>: Direktorat Pendidikan Tinggi Islam</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>TTL</td>
+                    <td>: -</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Jenis Kelamin</td>
+                    <td>: Laki-Laki</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Agama</td>
+                    <td>: -</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Alamat</td>
+                    <td>: -</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>No.Telp</td>
+                    <td>: -</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Email</td>
+                    <td>: pieter@gmail.com</td>
+                  </tr>
+                  <tr class="pt-1">
+                    <td>Pendidikan</td>
+                    <td>: -</td>
+                  </tr>
+                </table>
               </th>
-              <th class="text-left pl-[14px] leading-8">
-                : Pieter Schrodinger <br />
-                : nonpns19973423449234 <br />
-                : Direktorat Pendidikan Tinggi <br />
-                : - <br />
-                : Laki-laki <br />
-                : - <br />
-                : - <br />
-                : - <br />
-                : pieter@gmail.com <br />
-                : -
-              </th>
-              <th class="pl-[440px]">
+              <th class="pl-[440px] align-top">
                 <img
                   src="/src/assets/Images/stock-photo.png"
                   alt="foto-diri"
