--- a/src/admin-dashboard.html
+++ b/src/admin-dashboard.html
@@ -27,13 +27,37 @@
       </div>
       <div class="drawer-side">
         <label for="my-drawer-2" class="drawer-overlay"></label>
-        <ul class="menu p-4 w-80 bg-base-100 text-base-content">
-          <li><a href="#">Sidebar Item 1</a></li>
-          <li><a href="#">Sidebar Item 2</a></li>
+        <ul
+          class="menu p-4 w-[268px] bg-lgray text-dBlue font-nunito font-bold text-sm"
+        >
+          <li class="text-2xl font-extrabold text-bBlue pt-6">
+            <a href="#">Laporan Pegawai</a>
+          </li>
+          <li class="pl-2 mt-9">
+            <a href="#"
+              ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
+            >
+          </li>
+          <li class="pl-2">
+            <a href="#"
+              ><img
+                src="/src/assets/Images/data-logo.png"
+                alt="data_pegawai"
+              />Data Pegawai</a
+            >
+          </li>
+          <li class="pl-2 mt-2">
+            <a href="#"
+              ><img src="/src/assets/Images/door-logo.png" alt="logout" />LOG
+              OUT</a
+            >
+          </li>
         </ul>
       </div>
     </div>
-    <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
+    <footer
+      class="bg-lBlue font-nunito text-bBlue font-normal text-sm py-[22px] text-center inset-x-0 bottom-0"
+    >
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
