add comment for later progress

--- a/src/admin-dashboard.html
+++ b/src/admin-dashboard.html
@@ -21,6 +21,7 @@
     <div class="drawer drawer-mobile">
       <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col items-center justify-center">
+        <!-- page content here -->
         <label for="my-drawer-2" class="btn btn-primary drawer-button lg:hidden"
           >Open Drawer</label
         >
@@ -30,6 +31,7 @@
         <ul
           class="menu p-4 w-[268px] bg-lgray text-dBlue font-nunito font-bold text-sm"
         >
+          <!-- sidebar content here -->
           <li class="text-2xl font-extrabold text-bBlue pt-6">
             <a href="#">Laporan Pegawai</a>
           </li>
