add slicing Admin Data Pegawai Page

--- a/src/login.html
+++ b/src/login.html
@@ -19,11 +19,11 @@
       <form action="">
           <div class="text-sm font-nunito font-semibold text-aBlue ml-[473px] mt-[23px]">
               <label for="NIP">NIP</label><br>
-              <input type="text" placeholder="Masukan NIP anda" class="font-normal mt-1 border border-cBlue w-[420px] h-[45px] rounded-md pl-[10px]"/>
+              <input type="text" placeholder="Masukan NIP anda" class="font-normal mt-1 bg-white border border-cBlue w-[420px] h-[45px] rounded-md pl-[10px]"/>
           </div>
           <div class="text-sm font-nunito font-semibold text-aBlue ml-[473px] mt-6">
               <label for="password">Password</label><br>
-              <input type="password" placeholder="Masukan Password anda" class="font-normal mt-1 border border-cBlue w-[420px] h-[45px] rounded-md pl-[10px]" />
+              <input type="password" placeholder="Masukan Password anda" class="font-normal mt-1 bg-white border border-cBlue w-[420px] h-[45px] rounded-md pl-[10px]" />
             </form>
           </div>
           <div class="lupa-password mt-4 font-nunito font-normal">
