--- a/src/register-username.html
+++ b/src/register-username.html
@@ -25,33 +25,33 @@
       </div>
       <form action="">
         <div class="mt-[14px] text-sm">
-          <label for="nama" class="text-bBlue font-semibold">NIP</label><br />
+          <label for="nip" class="text-bBlue font-semibold">NIP</label><br />
           <input
             type="text"
             placeholder="Masukkan NIP anda"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
       <form action="">
         <div class="mt-[11px] text-sm">
-          <label for="email" class="text-bBlue font-semibold">Password</label
+          <label for="password" class="text-bBlue font-semibold">Password</label
           ><br />
           <input
             type="password"
             placeholder="Masukkan Password yang akan dibuat"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
       <form action="">
         <div class="mt-[11px] text-sm">
-          <label for="phone" class="text-bBlue font-semibold">Konfirmasi Password</label
+          <label for="password" class="text-bBlue font-semibold">Konfirmasi Password</label
           ><br />
           <input
             type="password"
             placeholder="Konfirmasi Password anda"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       <div class="mt-[14px] mb-10 text-lg font-extrabold">
