--- a/src/register.html
+++ b/src/register.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             placeholder="Masukkan nama anda"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -66,7 +66,7 @@
           <input
             type="number"
             placeholder="Masukkan No.Telp anda"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -126,7 +126,7 @@
           <input
             type="text"
             placeholder="Masukkan email anda"
-            class="font-normal border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
