add routes in sidebar

--- a/src/admin-dashboard.html
+++ b/src/admin-dashboard.html
@@ -263,15 +263,15 @@
         >
           <!-- sidebar content here -->
           <li class="text-2xl font-extrabold text-bBlue pt-6">
-            <a href="#">Laporan Pegawai</a>
+            <a href="/src/admin-dashboard.html">Laporan Pegawai</a>
           </li>
           <li class="pl-2 mt-9">
-            <a href="#"
+            <a href="/src/admin-dashboard.html"
               ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
             >
           </li>
           <li class="pl-2">
-            <a href="#"
+            <a href="/src/admin-data.html"
               ><img
                 src="/src/assets/Images/data-logo.png"
                 alt="data_pegawai"
@@ -279,7 +279,7 @@
             >
           </li>
           <li class="pl-2 mt-2">
-            <a href="#"
+            <a href="/src/login.html"
               ><img src="/src/assets/Images/door-logo.png" alt="logout" />LOG
               OUT</a
             >
