--- a/src/admin-data.html
+++ b/src/admin-data.html
@@ -142,7 +142,7 @@
               <tr>
                 <th class="w-[248px]">23/09/1987</td>
                 <th class="w-[111px]">
-                  <a href="#" class="underline">lihat</a>
+                  <a href="/src/admin-specific.html" class="underline">lihat</a>
                 </td>
               </tr>
             </table>
@@ -157,7 +157,7 @@
                 <tr>
                   <th class="w-[248px]">13/04/1945</td>
                   <th class="w-[111px]">
-                    <a href="#" class="underline">lihat</a>
+                    <a href="/src/admin-specific.html" class="underline">lihat</a>
                   </td>
                 </tr>
               </table>
@@ -172,7 +172,7 @@
                 <tr>
                   <th class="w-[248px]">21/01/2000</td>
                   <th class="w-[111px]">
-                    <a href="#" class="underline">lihat</a>
+                    <a href="/src/admin-specific.html" class="underline">lihat</a>
                   </td>
                 </tr>
               </table>
@@ -187,7 +187,7 @@
                 <tr>
                   <th class="w-[248px]">03/04/1956</td>
                   <th class="w-[111px]">
-                    <a href="#" class="underline">lihat</a>
+                    <a href="/src/admin-specific.html" class="underline">lihat</a>
                   </td>
                 </tr>
               </table>
@@ -202,7 +202,7 @@
                 <tr>
                   <th class="w-[248px]">25/06/1978</td>
                   <th class="w-[111px]">
-                    <a href="#" class="underline">lihat</a>
+                    <a href="/src/admin-specific.html" class="underline">lihat</a>
                   </td>
                 </tr>
               </table>
@@ -217,7 +217,7 @@
                 <tr>
                   <th class="w-[248px]">31/12/1999</td>
                   <th class="w-[111px]">
-                    <a href="#" class="underline">lihat</a>
+                    <a href="/src/admin-specific.html" class="underline">lihat</a>
                   </td>
                 </tr>
               </table>
@@ -241,15 +241,15 @@
         >
           <!-- sidebar content here -->
           <li class="text-2xl font-extrabold text-bBlue pt-6">
-            <a href="#">Laporan Pegawai</a>
+            <a href="/src/admin-dashboard.html">Laporan Pegawai</a>
           </li>
           <li class="pl-2 mt-9">
-            <a href="#"
+            <a href="/src/admin-dashboard.html"
               ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
             >
           </li>
           <li class="pl-2">
-            <a href="#"
+            <a href="/src/admin-data.html"
               ><img
                 src="/src/assets/Images/data-logo.png"
                 alt="data_pegawai"
@@ -257,7 +257,7 @@
             >
           </li>
           <li class="pl-2 mt-2">
-            <a href="#"
+            <a href="/src/login.html"
               ><img src="/src/assets/Images/door-logo.png" alt="logout" />LOG
               OUT</a
             >
