--- a/src/admin-specific.html
+++ b/src/admin-specific.html
@@ -24,7 +24,7 @@
         <div
           class="mt-[70px] font-nunito font-bold text-bBlue text-xl mx-[28px]"
         >
-          < Kembali
+          <a href="/src/admin-data.html">< Kembali</a>
         </div>
         <table
           class="mt-[26px] text-base text-bBlue font-semibold font-nunito ml-[28px]"
@@ -115,15 +115,15 @@
         >
           <!-- sidebar content here -->
           <li class="text-2xl font-extrabold text-bBlue pt-6">
-            <a href="#">Laporan Pegawai</a>
+            <a href="/src/admin-dashboard.html">Laporan Pegawai</a>
           </li>
           <li class="pl-2 mt-9">
-            <a href="#"
+            <a href="/src/admin-dashboard.html"
               ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
             >
           </li>
           <li class="pl-2">
-            <a href="#"
+            <a href="/src/admin-data.html"
               ><img
                 src="/src/assets/Images/data-logo.png"
                 alt="data_pegawai"
@@ -131,7 +131,7 @@
             >
           </li>
           <li class="pl-2 mt-2">
-            <a href="#"
+            <a href="/src/login.html"
               ><img src="/src/assets/Images/door-logo.png" alt="logout" />LOG
               OUT</a
             >
