fixed footer color

--- a/src/login.html
+++ b/src/login.html
@@ -33,7 +33,7 @@
               <a href="/src/register.html"><button class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md">Daftar</button></a>
               <a href="/src/home.html"><button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] ml-9 rounded-md">Masuk</button></a>
           </div>
-            <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
+            <footer class="bg-lBlue text-bBlue py-[22px] text-center fixed inset-x-0 bottom-0">
               Copyright © 2023 Kemenag RI. All Right Reserved
             </footer>
     </div>
