--- a/src/success.html
+++ b/src/success.html
@@ -23,7 +23,7 @@
       <div class="w-[161px] -mt-2 ml-[603px]">
         <img src="/src/assets/Images/success-logo.png" alt="logo-success" />
       </div>
-      <div class="text-lg font-semibold mt-[27px] ml-[548px]">
+      <div class="text-lg text-black font-semibold mt-[27px] ml-[548px]">
         Akun Telah Berhasil Didaftarkan!
       </div>
       <div class="mt-[27px] py-3 ml-[560px]">
@@ -36,7 +36,9 @@
         >
       </div>
     </div>
-    <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
+    <footer
+      class="bg-lBlue text-bBlue py-[22px] text-center inset-x-0 bottom-0"
+    >
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
