--- a/src/home.html
+++ b/src/home.html
@@ -86,7 +86,9 @@
         </div>
       </div>
     </div>
-    <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
+    <footer
+      class="bg-lBlue text-bBlue py-[22px] text-center fixed inset-x-0 bottom-0"
+    >
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
