--- a/src/register-upload-photo.html
+++ b/src/register-upload-photo.html
@@ -78,7 +78,9 @@
         >
       </div>
     </div>
-    <footer class="bg-lBlue py-[22px] text-center inset-x-0 bottom-0">
+    <footer
+      class="bg-lBlue text-bBlue py-[22px] text-center inset-x-0 bottom-0"
+    >
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
