--- a/src/register-username.html
+++ b/src/register-username.html
@@ -65,7 +65,7 @@
         <a href="/src/upload-photo.html"><button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]">Next</button></a>
       </div>
     </div>
-    <footer class="bg-lBlue py-[22px] text-center fixed inset-x-0 bottom-0">
+    <footer class="bg-lBlue text-bBlue py-[22px] text-center fixed inset-x-0 bottom-0">
       Copyright © 2023 Kemenag RI. All Right Reserved
     </footer>
   </body>
