fixed user pages layouting

--- a/src/home.html
+++ b/src/home.html
@@ -44,6 +44,7 @@
             </th>
           </tr>
         </table>
+        </div>
         <div class="content mt-10 ml-[250px] text-bBlue">
           <div class="font-extrabold text-4xl">Selamat Datang!</div>
           <div class="mt-[15px]">
