--- a/src/laporan.html
+++ b/src/laporan.html
@@ -44,6 +44,7 @@
             </th>
           </tr>
         </table>
+        </div>
         <div class="content mt-10">
           <div class="font-extrabold text-4xl pl-[250px] text-bBlue">Laporan Harian</div>
           <table
