--- a/src/profil.html
+++ b/src/profil.html
@@ -44,6 +44,7 @@
             </th>
           </tr>
         </table>
+        </div>
         <div class="content mt-10 ml-[250px] text-bBlue">
           <div class="font-extrabold text-4xl">Profil</div>
           <table class="mt-[15px] text-base font-semibold">
