improved aligning on user pages

--- a/src/home.html
+++ b/src/home.html
@@ -52,23 +52,23 @@
               <tr>
                 <th>
                   <table class="text-left">
-                    <tr>
+                    <tr class="align-top">
                       <td class="pt-[25px]">Nama</td>
                       <td class="pt-[25px]">: Pieter Schrodinger</td>
                     </tr>
-                    <tr>
+                    <tr class="align-top">
                       <td class="pt-4">NIP</td>
                       <td class="pt-4">: nonpns19973423449234</td>
                     </tr>
-                    <tr>
+                    <tr class="align-top">
                       <td class="pt-4">Unit Kerja</td>
                       <td class="pt-4">: Direktorat Pendidikan Tinggi Islam</td>
                     </tr>
-                    <tr>
+                    <tr class="align-top">
                       <td class="pt-4">Jenis Kelamin</td>
                       <td class="pt-4">: Laki-Laki</td>
                     </tr>
-                    <tr>
+                    <tr class="align-top">
                       <td class="pt-4">Email</td>
                       <td class="pt-4">: pieter@gmail.com</td>
                     </tr>
