--- a/src/profil.html
+++ b/src/profil.html
@@ -51,43 +51,43 @@
             <tr>
               <th>
                 <table class="text-left">
-                  <tr>
+                  <tr class="align-top">
                     <td class="pt-[25px]">Nama</td>
                     <td class="pt-[25px]">: Pieter Schrodinger</td>
                   </tr>
-                  <tr>
-                    <td class="pt-1">NIP</td>
-                    <td class="pt-1">: nonpns19973423449234</td>
+                  <tr class=" pt-1 align-top">
+                    <td>NIP</td>
+                    <td>: nonpns19973423449234</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Unit Kerja</td>
                     <td>: Direktorat Pendidikan Tinggi Islam</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>TTL</td>
                     <td>: -</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Jenis Kelamin</td>
                     <td>: Laki-Laki</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Agama</td>
                     <td>: -</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Alamat</td>
                     <td>: -</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>No.Telp</td>
                     <td>: -</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Email</td>
                     <td>: pieter@gmail.com</td>
                   </tr>
-                  <tr class="pt-1">
+                  <tr class="pt-1 align-top">
                     <td>Pendidikan</td>
                     <td>: -</td>
                   </tr>
