--- a/src/laporan.html
+++ b/src/laporan.html
@@ -34,7 +34,7 @@
             <th class="text-right font-bold pl-[779px]">
               <a href="/src/login.html">Keluar</a>
             </th>
-            <th>
+            <th class="pr-6">
               <a href="/src/login.html"
                 ><img
                   src="/src/assets/Images/logout-logo.png"
